Created the initial start screen of what the page could look like for now

--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Rye&display=swap" rel="stylesheet">
 </head>
 <body>
-  <section class="container">
-    <h1>Last Stand: Horde Siege</h1>
-    <section class="arena">
-
-    </section>
+  <h1>Last Stand: Horde Siege</h1>
+  <section class="arena">
+    <div class="startScreenText">
+      <p>It's over. The world has been over run by monsters</p>
+      <p>As the last survivor of the human race, you must hold out as long as you can with no hope of rescue</p>
+      <p>How long will you survive?</p>
+      <a href="#">Click to Slay!</a>
+      <p>Rip and tear, until it is done</p>
+    </div>
   </section>
 </body>
 <script src="js/main.js"></script>
