--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
       <p>It's over. The world has been over run by monsters</p>
       <p>As the last survivor of the human race, you must hold out as long as you can with no hope of rescue</p>
       <p>How long will you survive?</p>
-      <a href="#">Click to Slay!</a>
+      <a href="#" id="startSlaying" >Click to Slay!</a>
       <p>Rip and tear, until it is done</p>
     </div>
+    <div class="playerBase hidden"></div>
   </section>
 </body>
 <script src="js/main.js"></script>
