Finding some assets and looking into how to code this out

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 </head>
 <body>
   <h1>Last Stand: Horde Siege</h1>
-  <section class="arena">
+  <section>
+    <div class="myGame"></div>
+  </section>
+  <!-- 
+    <section class="container">
+    <section class="arena">
     <div class="startScreenText">
       <p>It's over. The world has been over run by monsters</p>
       <p>As the last survivor of the human race, you must hold out as long as you can with no hope of rescue</p>
@@ -19,8 +24,11 @@
       <a href="#" id="startSlaying" >Click to Slay!</a>
       <p>Rip and tear, until it is done</p>
     </div>
-    <div class="playerBase hidden"></div>
+    <canvas></canvas>
   </section>
+  </section>
+
+  -->
 </body>
 <script src="js/main.js"></script>
 </html>
