Creating the canvas and click event

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Last Stand Horde Siege</title>
   <link rel="stylesheet" href="css/style.css">
@@ -10,25 +11,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Rye&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Last Stand: Horde Siege</h1>
-  <section>
-    <div class="myGame"></div>
-  </section>
-  <!-- 
+    <h1>Last Stand: Horde Siege</h1>
     <section class="container">
-    <section class="arena">
-    <div class="startScreenText">
-      <p>It's over. The world has been over run by monsters</p>
-      <p>As the last survivor of the human race, you must hold out as long as you can with no hope of rescue</p>
-      <p>How long will you survive?</p>
-      <a href="#" id="startSlaying" >Click to Slay!</a>
-      <p>Rip and tear, until it is done</p>
-    </div>
-    <canvas></canvas>
+      <section class="arena">
+      <div class="startScreenText">
+        <p>It's over. The world has been over run by monsters</p>
+        <p>As the last survivor of the human race, you must hold out as long as you can with no hope of rescue</p>
+        <p>How long will you survive?</p>
+        <a href="#" id="startSlaying" >Click to Slay!</a>
+        <p>Rip and tear, until it is done</p>
+      </div>
+    </section>
   </section>
-  </section>
-
-  -->
 </body>
 <script src="js/main.js"></script>
 </html>
