Re did a lot of code. Added in second html page. Added enemies into the game

--- a/arena.html
+++ b/arena.html
@@ -12,16 +12,9 @@
 </head>
 <body>
     <h1>Last Stand: Horde Siege</h1>
-    <section class="container">
-      <section class="arena">
-      <div class="startScreenText">
-        <p>It's over. The world has been over run by monsters</p>
-        <p>As the last survivor of the human race, you must hold out as long as you can with no hope of rescue</p>
-        <p>How long will you survive?</p>
-        <a href="arena.html">Click to Slay!</a>
-        <p>Rip and tear, until it is done</p>
-      </div>
-    </section>
+    <section class="arena-container">
+      <canvas id="gameCanvas"></canvas>
   </section>
 </body>
+<script src="js/main.js"></script>
 </html>
