added music into the game

--- a/arena.html
+++ b/arena.html
@@ -12,6 +12,9 @@
 </head>
 <body>
     <h1>Last Stand: Horde Siege</h1>
+    <audio autoplay loop>
+        <source src="vengeance.mp3" type="audio/mp3">
+      </audio>
     <section class="arena-container">
       <canvas id="gameCanvas"></canvas>
   </section>
