--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 <body>
     <h1>Last Stand: Horde Siege</h1>
     <section class="container">
+      <audio controls autoplay> 
+        <source src="lastStandHordeSiegeVoiceOver.mp3" type="audio/mp3">
+      </audio>
       <section class="arena">
       <div class="startScreenText">
-        <p>It's over. The world has been over run by monsters</p>
+        <p>It's over. The world has been overrun by monsters</p>
         <p>As the last survivor of the human race, you must hold out as long as you can with no hope of rescue</p>
         <p>How long will you survive?</p>
         <a href="arena.html">Click to Slay!</a>
